<resources>
    <string name="app_name">zBodyTemp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Persons screen-->
    <string name="persons_title">Persons</string>
    <string name="activity_persons_menu_add">Add person</string>

    <!--Person info screen-->
    <string name="activity_person_info_title">Person info</string>
    <string name="activity_person_info_menu_save">Save person</string>
    <string name="activity_person_info_hint_name">Name</string>
    <string name="activity_person_info_hint_surname">Surname</string>
    <string name="activity_person_info_hint_birthday">Birthday</string>

    <!--Card screen-->
    <string name="activity_card_title">History</string>
    <string name="activity_card_list_title">List</string>
    <string name="activity_card_graph_title">Graph</string>
    <string name="activity_card_note_title">Notes</string>
    <string name="activity_card_menu_add">New record</string>
    <string name="activity_card_menu_save">Save</string>
    <string name="activity_card_menu_read">Read</string>

    <!--Record type popup-->
    <string name="record_type_popup_title">Select record type</string>
    <string name="record_type_temperature_title">Temperature</string>
    <string name="record_type_medicine_title">Medicine</string>
    <string name="record_type_note_title">Note</string>

    <!--Temperature selection popup-->
    <string name="temp_popup_title">Enter temperature</string>
    <string name="temp_popup_ok_button">OK</string>
    <string name="temp_popup_cancel_button">Cancel</string>

    <!--Time popup-->
    <string name="time_popup_title">Select time</string>

    <!--Date popup-->
    <string name="date_popup_title">Select date</string>

    <!--Messages-->
    <string name="validation_failed_message">Check entered data and try again, please</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
