<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/activity_person_info_hint_name"
        android:id="@+id/person_info_nameEditText"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/activity_person_info_hint_surname"
        android:id="@+id/person_info_surnameEditText"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_person_info_hint_birthday"
        android:id="@+id/person_info_birthdayButton"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/person_info_iconButton"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sick_male"
        android:background="@drawable/activity_person_info_icon"
        android:layout_marginTop="10dp"/>

</LinearLayout>